--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="wrapper" data-width="wide">
         <div class="site-header__inner">
           <img src="/assets/fungi-finders.svg" alt="Fungi Finders" />
-          <nav class="primary-">
+          <nav class="primary-navigation">
             <ul role="list">
               <li>hello</li>
               <li><a href="/">Discover</a></li>
@@ -30,30 +30,34 @@
       </div>
     </header>
     <main>
-      <section class="hero section" data-padding="compact">
+      <section class="hero flow section" data-padding="compact">
         <div class="wrapper">
-          <h1 id="h1">Discover the World of Mushroom Foraging</h1>
+          <h1 class="hero__title">
+            Discover the World of <span>Mushroom Foraging</span>
+          </h1>
         </div>
         <div class="wrapper" data-width="narrow">
-          <p>
-            Mushroom foraging is the art and science of identifying and
-            collecting wild mushrooms.
-          </p>
-          <p>
-            It's a practice that combines outdoor exploration, botanical
-            knowledge, and culinary adventure. Foragers venture into forests,
-            fields, and even urban green spaces to discover these hidden
-            treasures.
-          </p>
-          <p>
-            But beware – this hobby requires careful study and respect for
-            nature, as some mushrooms can be dangerous if misidentified.
-          </p>
+          <div class="flow">
+            <p>
+              Mushroom foraging is the art and science of identifying and
+              collecting wild mushrooms.
+            </p>
+            <p>
+              It's a practice that combines outdoor exploration, botanical
+              knowledge, and culinary adventure. Foragers venture into forests,
+              fields, and even urban green spaces to discover these hidden
+              treasures.
+            </p>
+            <p>
+              But beware – this hobby requires careful study and respect for
+              nature, as some mushrooms can be dangerous if misidentified.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="section">
-        <div class="wrapper">
+        <div class="wrapper flow">
           <h2 class="section-title">The joys of mushroom foraging</h2>
           <p>
             Foraging for mushrooms can be a rewarding experience for many
@@ -62,13 +66,13 @@
             thrill of the hunt, and savor the satisfaction of finding a hidden
             culinary treasure.
           </p>
-          <div>
-            <div class="card">
+          <div class="equal-columns">
+            <div class="card grid-flow">
               <img
                 src="/assets/outdoor-exploration.webp"
                 alt="Outdoor exploration"
               />
-              <h3>Outdoor Exploration</h3>
+              <h3 class="card__title">Outdoor Exploration</h3>
               <p>
                 Mushroom foraging takes you off the beaten path and into the
                 heart of nature. Learn to read the landscape, identifying prime
@@ -77,12 +81,12 @@
                 for exciting discoveries around every tree and under every log.
               </p>
             </div>
-            <div class="card">
+            <div class="card grid-flow">
               <img
                 src="/assets/botanical-expertise.webp"
                 alt="Botanical expertise"
               />
-              <h3>Botanical Expertise</h3>
+              <h3 class="card__title">Botanical Expertise</h3>
               <p>
                 Dive into the intricate world of fungal biology. Discover the
                 unique structures of mushrooms, from caps to gills to spores.
@@ -92,12 +96,12 @@
                 ecosystem health.
               </p>
             </div>
-            <div class="card">
+            <div class="card grid-flow">
               <img
                 src="/assets/culinary-delight.webp"
                 alt="Culinary delights"
               />
-              <h3>Culinary Delights</h3>
+              <h3 class="card__title">Culinary Delights</h3>
               <p>
                 Transform your foraged finds into delectable dishes. Many edible
                 mushrooms offer unique flavors and textures that can elevate
@@ -111,27 +115,32 @@
         </div>
       </section>
 
-      <section class="section background-accent" data-padding="compact">
+      <section
+        class="section background-accent text-center"
+        data-padding="compact"
+      >
         <div class="wrapper">
-          <h2 class="section-title">
-            Start your <span class="text-brand">Foraging Adventure!</span>
-          </h2>
-          <p>
-            Whether you're seeking a deeper connection with nature, a new
-            outdoor hobby, or simply love the idea of finding your own food,
-            mushroom foraging offers a uniquely rewarding experience.
-          </p>
+          <div class="flow font-size-lg text-high-contrast">
+            <h2 class="section-title">
+              Start your <span class="text-brand">Foraging Adventure!</span>
+            </h2>
+            <p>
+              Whether you're seeking a deeper connection with nature, a new
+              outdoor hobby, or simply love the idea of finding your own food,
+              mushroom foraging offers a uniquely rewarding experience.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="section background-extra-dark">
         <!-- two columns -->
         <div class="wrapper" data-width="wide">
-          <div>
+          <div class="equal-columns" data-gap="large" data-alignment="centered">
             <div>
               <img src="/assets/get-to-know.webp" alt="Inspecting mushroom" />
             </div>
-            <div>
+            <div class="flow font-size-lg">
               <h2 class="section-title">Get to know your mushrooms</h2>
               <p>
                 Successful and safe mushroom foraging begins with a deep
@@ -157,8 +166,8 @@
       <section class="section">
         <!-- two columns -->
         <div class="wrapper" data-width="wide">
-          <div>
-            <div>
+          <div class="equal-columns" data-gap="large" data-alignment="centered">
+            <div class="flow font-size-lg">
               <h2 class="section-title">Connect with Nature</h2>
               <p>
                 Experience the beauty of the great outdoors while foraging for
@@ -172,9 +181,9 @@
                 ></a
               >
             </div>
-          </div>
-          <div>
-            <img src="/assets/nature.webp" alt="mushrooms in nature" />
+            <div>
+              <img src="/assets/nature.webp" alt="mushrooms in nature" />
+            </div>
           </div>
         </div>
       </section>
