--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           <img src="/assets/fungi-finders.svg" alt="Fungi Finders" />
           <nav class="primary-navigation">
             <ul role="list">
-              <li>hello</li>
               <li><a href="/">Discover</a></li>
               <li><a href="#">Mushroom guide</a></li>
               <li><a href="#">FAQ</a></li>
@@ -67,7 +66,7 @@
             culinary treasure.
           </p>
           <div class="equal-columns">
-            <div class="card grid-flow">
+            <div class="card">
               <img
                 src="/assets/outdoor-exploration.webp"
                 alt="Outdoor exploration"
@@ -81,7 +80,7 @@
                 for exciting discoveries around every tree and under every log.
               </p>
             </div>
-            <div class="card grid-flow">
+            <div class="card">
               <img
                 src="/assets/botanical-expertise.webp"
                 alt="Botanical expertise"
@@ -96,7 +95,7 @@
                 ecosystem health.
               </p>
             </div>
-            <div class="card grid-flow">
+            <div class="card">
               <img
                 src="/assets/culinary-delight.webp"
                 alt="Culinary delights"
@@ -189,8 +188,8 @@
       </section>
     </main>
     <footer class="site-footer">
-      <p>happy foraging</p>
-      <a href="mailto:contact@fungifinders.com"></a>
+      <p class="site-footer__title">happy foraging</p>
+      <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
   </body>
 </html>
